[package]
name = "learning_cell"
description = "Write-ups and examples for learning Cell types"
version = "0.1.0"
edition = "2021"
authors = ["Boran Seckin <boran@boranseckin.com>"]
repository = "https://github.com/boranseckin/learning-cell"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
